<resources>
    <string name="app_name">BluHomeExample</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Accelerometer</string>
    <string name="title_section3">Gyroscope</string>
    <string name="title_section4">Magnetometer</string>
    <string name="title_section5">IOPins</string>
    <string name="temperature">Temperature</string>
    <string name="ambient_light">Ambient Light</string>
    <string name="humidity">Humidity</string>
    <string name="barometer">Barometer</string>
    <string name="shop">Shop</string>
    <string name="gpio_out">GPIO OUT</string>
    <string name="gpio_in">GPIO IN</string>
    <string name="analog_read">ANALOG READ</string>
    <string name="pwm">PWM</string>
    <string name="gpio_value">0-1</string>
    <string name="blu_default_name">UDOO BLE TAG 1.0</string>
    <string name="pair">PAIR</string>
    <string name="pair_the_device">PAIR THE DEVICE</string>
    <string name="oad">OAD</string>
    <string name="oad_dialog_programming_finished">Firmware upgrade finished, the device should now disconnect, this will be evident by the device restarting and LED start blinking again. \r\n\r\nIf this should not happen, upgrade failed, you should try to upgrade again.</string>
    <string name="iopin">IOPin</string>
    <string name="iopin_in">INPUT</string>
    <string name="iopin_out">OUTPUT</string>
    <string name="iopin_analog">ANALOG READ</string>
    <string name="iopin_pwm">PWM</string>
    <string name="save">save</string>
    <string name="valueAnalog">0</string>
    <string name="buy">buy</string>
    <string name="brick">brick</string>
    <string name="buy_all_accessories">buy all accessories</string>
    <string name="btn_continue">continue</string>

    <string name="stepper_io_str_1">Click + Button to add new I/O PIN configuration</string>
    <string name="stepper_io_str_2">Choose the I/O and its configuration: Output, Input, Analog Read and PWM. Then click Save</string>
    <string name="stepper_io_str_3">OUTPUT: select if you want to enable or disable the I/O</string>
    <string name="stepper_io_str_4">INPUT: select if you want to enable or disable the I/O</string>
    <string name="stepper_io_str_5">ANALOG READ: select if you want to enable or disable the I/O</string>
    <string name="stepper_io_str_6">PWM: Control the Frequency and Duty cycle. Then press refresh.</string>
    <string name="stepper_io_str_7">DONE!</string>

    <string name="tutorial_blu_title_1">Wear your world</string>
    <string name="tutorial_blu_text_1">UDOO BLU is a flexible extension for your Internet of Things platform. Press Next to start configuring your first UDOO BLU.</string>

    <string name="tutorial_blu_title_2">Insert the Battery</string>
    <string name="tutorial_blu_text_2">Insert the Battery Button into the Battery holder placed behind the 3 LEDs.</string>

    <string name="tutorial_blu_title_3">Wait for the LEDs to Blink</string>
    <string name="tutorial_blu_text_3">Once the Battery is plugged the three LEDs will start blinking. If you don’t see them blink just unplug and replug the Battery.</string>

    <string name="tutorial_blu_title_4">Pick your BLU</string>
    <string name="tutorial_blu_text_4">Now your UDOO is in listening mode. Pair your UDOO BLU from the Home screen. If you don’t see any just refresh the page swiping it down.</string>
    <string name="guide">tutorial</string>
    <string name="no_blu_detected">no blu detected</string>
    <string name="url_shop_brick_barometer">http://shop.udoo.org/accessories/barometric-altimeter-temp-sensor-kit-for-neo.html</string>
    <string name="url_shop_brick_temperature">http://shop.udoo.org/accessories/temperature-sensor-kit-for-neo.html</string>
    <string name="url_shop_brick_humidity">http://shop.udoo.org/humidity-sensor-kit.html</string>
    <string name="url_shop_brick_ambientLight">http://shop.udoo.org/light-sensor-kit.html</string>
    <string name="dialog_shop_brick_title">Buy the Bricks</string>
    <string name="dialog_shop_brick_message">In order to use this function you need to buy the specific brick. Go to www.shop.udoo.org and buy it!</string>
    <string name="dialog_shop_brick_btn_negative">NO THANKS!</string>
    <string name="dialog_shop_brick_btn_positive">GO TO UDOO SHOP</string>

    <!--<string name="title_section5">Barometer</string>-->
    <!--<string name="title_section6">Temperature</string>-->

</resources>
