<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_id1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/home"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/nav_accelerometer"
            android:checkable="true"
            android:icon="@drawable/accelerometer"
            android:title="@string/title_section2" />
        <item
            android:id="@+id/nav_gyroscope"
            android:checkable="true"
            android:icon="@drawable/gyro"
            android:title="@string/title_section3" />

        <item
            android:id="@+id/nav_magnetometer"
            android:checkable="true"
            android:icon="@drawable/magnetometer"
            android:title="@string/title_section4" />
        <item
            android:id="@+id/nav_io_pins"
            android:checkable="true"
            android:icon="@drawable/magnetometer"
            android:title="@string/title_section5" />
    </group>
</menu>
