<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_iopin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/iopin" />

        <RadioGroup
            android:layout_margin="@dimen/activity_vertical_margin"
            android:id="@+id/radio_group_iopin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_iopin"
            android:layout_marginTop="@dimen/min_space_material">

            <RadioButton
                android:id="@+id/radio_btn_iopin_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iopin_out" />

            <RadioButton
                android:id="@+id/radio_btn_iopin_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iopin_in" />

            <RadioButton
                android:id="@+id/radio_btn_iopin_analog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iopin_analog" />

            <RadioButton
                android:id="@+id/radio_btn_iopin_pwm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iopin_pwm" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_iopin"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/save" />
    </RelativeLayout>
</layout>